<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".base.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/handlerBtn"
                android:text="@string/handler_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/webviewBtn"
                android:text="@string/jsbridge_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/BinderBtn"
                android:text="@string/binder_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
                      <Button
                android:id="@+id/CustomViewBtn"
                android:text="@string/custonview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
            android:id="@+id/AnimationBtn"
            android:text="@string/animation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
            <Button
                android:id="@+id/SocketClientBIOBtn"
                android:text="@string/socket_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/RxBtn"
                android:text="@string/title_activity_rx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>